Inserção do método de leitura do arquivo HTML

--- a/report_html_db/example.html
+++ b/report_html_db/example.html
@@ -29,9 +29,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <!-- You can change the email here -->
-					<strong>Email:</strong> <!-- <div class="header" id="email"> -->example@example.com<!-- </div>-->&nbsp;&nbsp;
+					<span class="header" id="email"><strong>Email:</strong> example@example.com</span>&nbsp;&nbsp;
                     <!-- You can change the support infomation here -->
-                    <strong>Support:</strong> <!-- <div class="header" id="support"> -->+11 (11) 11111-1111<!-- </div> -->
+                    <span class="header" id="support"><strong>Support:</strong> +11 (11) 11111-1111</span>
                 </div>
             </div>
         </div>
@@ -172,7 +172,7 @@
 	                        <div class="panel-heading">
 	                            <h4 class="panel-title">
 	                            	<!-- You can change the about title panel here -->
-	                                <a data-toggle="collapse" data-parent="#accordion" href="#about_2" class="collapsed"><div class="about" id="table-content-1">Project members</div></a>
+	                                <a data-toggle="collapse" data-parent="#accordion" href="#about_2" class="collapsed"><div class="about" id="table-content-2">Project members</div></a>
 	                            </h4>
 	                        </div>
 	                        <div id="about_2" class="panel-collapse collapse">
@@ -185,9 +185,8 @@
 											<li><div class="about_2" id="1-list-2"><a href='mailto:argruber@usp.br'>Arthur Gruber</a>, D.V.M., Ph.D. - Associate Professor, University of São Paulo</div></li>
 										</ul>
 										<h1 id="about_2-2-title" class="page-head-line"><div class="about_2" id="2-title">Collaborator</div></h1>
-										<p><div class="about_1" id="2-paragraph">The aim of this project is the construction of a genome scaffold of <i>Photorhabdus luminescens</i> MN7 through next generation sequencing. This project aims to better understand the biology and evolution of bacteria of the genus <i>Photorhabdus</i> and make an inventory, as complete as possible, of the genes involved in the production of secondary metabolites and toxins that mediate symbiotic relationships with the nematode, the insect, and other species of nematodes. This project will be integrated with other projects of the laboratory studying entomopathogenic nematodes and their bacteria and will generate important data for researchers working on these bacteria in other countries.</div></p>
 										<ul>
-											<li><div class="about_2" id="3-list-1"><a href='mailto:alan\@ime.usp.br'>Alan M. Durham</a>, Ph.D., Assistant Professor, University of São Paulo</div></li>
+											<li><div class="about_2" id="3-list-1"><a href='mailto:alan@ime.usp.br'>Alan M. Durham</a>, Ph.D., Assistant Professor, University of São Paulo</div></li>
 										</ul>
 										<h1 id="about_2-4-title" class="page-head-line"><div class="about_2" id="4-title">Members</div></h1>
 										<ul>
@@ -206,7 +205,7 @@
 	                        <div class="panel-heading">
 	                            <h4 class="panel-title">
 	                            	<!-- You can change the about title panel here -->
-	                                <a data-toggle="collapse" data-parent="#accordion" href="#about_3" class="collapsed"><div class="about" id="table-content-1">Photorhabdus</div></a>
+	                                <a data-toggle="collapse" data-parent="#accordion" href="#about_3" class="collapsed"><div class="about" id="table-content-3">Organism</div></a>
 	                            </h4>
 	                        </div>
 	                        <div id="about_3" class="panel-collapse collapse">
@@ -227,7 +226,7 @@
 	                        <div class="panel-heading">
 	                            <h4 class="panel-title">
 	                            	<!-- You can change the about title panel here -->
-	                                <a data-toggle="collapse" data-parent="#accordion" href="#about_4" class="collapsed"><div class="about" id="table-content-1">Funding</div></a>
+	                                <a data-toggle="collapse" data-parent="#accordion" href="#about_4" class="collapsed"><div class="about" id="table-content-4">Funding</div></a>
 	                            </h4>
 	                        </div>
 	                        <div id="about_4" class="panel-collapse collapse">
@@ -258,7 +257,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="footer"><a href="/#">&copy; 2016 YourCompany | By : Name</a></div>
+                	<!-- You can change the footer content -->
+                    <div class="footer" id="">&copy; 2016 YourCompany | By : Name</div>
                 </div>
 
             </div>
@@ -267,8 +267,8 @@
     <!-- FOOTER SECTION END-->
     <!-- JAVASCRIPT AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
     <!-- CORE JQUERY SCRIPTS -->
-    <script src="assets/js/jquery-1.11.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- BOOTSTRAP SCRIPTS  -->
-    <script src="assets/js/bootstrap.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
